centre column + date alignment mid-fix - not yet complete

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -36,8 +36,7 @@ a {
 	display: block;
 	width: 470px;
 	height: 80px;
-	/*background: url(/images/logo.png) left top no-repeat;*/
-	background: grey;
+	background: url(/images/logo.png) left top no-repeat;
 }
 
 .panel {
